crates/hearthd/src/automations/codegen/snapshots/hearthd__automations__codegen__tests__codegen_binary_ops.snap
---
source: crates/hearthd/src/automations/codegen/tests.rs
expression: result
---
Input:
observer {} /true/ { 1 + 2 * 3; [] }

---
HIR:
Automation: observer
  bb0:
    %0 = const_bool true [Bool]
    branch %0 -> bb1, bb2
  bb1:
    %2 = const_int 1 [Int]
    %3 = const_int 2 [Int]
    %4 = const_int 3 [Int]
    %5 = mul %3, %4 [Int]
    %6 = add %2, %5 [Int]
    %7 = empty_list [[<error>]]
    return %7
  bb2:
    %1 = empty_list [[Event]]
    return %1

---
LIR:
Constants:
  c0 = bool(true)
  c1 = int(1)
  c2 = int(2)
  c3 = int(3)
Symbols:
  (none)
Automation: observer
  Registers: 8
  Instructions:
    0000: r0 = load_const c0
    0001: branch r0 -> 0002, 0009
    0002: r2 = load_const c1
    0003: r3 = load_const c2
    0004: r4 = load_const c3
    0005: r5 = mul r3, r4
    0006: r6 = add r2, r5
    0007: r7 = empty_list
    0008: return r7
    0009: r1 = empty_list
    0010: return r1
