crates/hearthd/src/automations/codegen/snapshots/hearthd__automations__codegen__tests__codegen_constants.snap
---
source: crates/hearthd/src/automations/codegen/tests.rs
expression: result
---
Input:
observer {} /true/ { 42; 1.5; "hello"; false; [] }

---
HIR:
Automation: observer
  bb0:
    %0 = const_bool true [Bool]
    branch %0 -> bb1, bb2
  bb1:
    %2 = const_int 42 [Int]
    %3 = const_float 1.5 [Float]
    %4 = const_string "hello" [String]
    %5 = const_bool false [Bool]
    %6 = empty_list [[<error>]]
    return %6
  bb2:
    %1 = empty_list [[Event]]
    return %1

---
LIR:
Constants:
  c0 = bool(true)
  c1 = int(42)
  c2 = float(1.5)
  c3 = string("hello")
  c4 = bool(false)
Symbols:
  (none)
Automation: observer
  Registers: 7
  Instructions:
    0000: r0 = load_const c0
    0001: branch r0 -> 0002, 0008
    0002: r2 = load_const c1
    0003: r3 = load_const c2
    0004: r4 = load_const c3
    0005: r5 = load_const c4
    0006: r6 = empty_list
    0007: return r6
    0008: r1 = empty_list
    0009: return r1
