crates/hearthd/src/automations/codegen/snapshots/hearthd__automations__codegen__tests__codegen_function_call.snap
---
source: crates/hearthd/src/automations/codegen/tests.rs
expression: result
---
Input:
observer {} /true/ { clamp(100, 0, 255); [] }

---
HIR:
Automation: observer
  bb0:
    %0 = const_bool true [Bool]
    branch %0 -> bb1, bb2
  bb1:
    %2 = const_int 100 [Int]
    %3 = const_int 0 [Int]
    %4 = const_int 255 [Int]
    %5 = call clamp(%2, %3, %4) [Int]
    %6 = empty_list [[<error>]]
    return %6
  bb2:
    %1 = empty_list [[Event]]
    return %1

---
LIR:
Constants:
  c0 = bool(true)
  c1 = int(100)
  c2 = int(0)
  c3 = int(255)
Symbols:
  s0 = "clamp"
Automation: observer
  Registers: 7
  Instructions:
    0000: r0 = load_const c0
    0001: branch r0 -> 0002, 0008
    0002: r2 = load_const c1
    0003: r3 = load_const c2
    0004: r4 = load_const c3
    0005: r5 = call s0(r2, r3, r4)
    0006: r6 = empty_list
    0007: return r6
    0008: r1 = empty_list
    0009: return r1
